--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@
         justify-content: center;
         gap: 1em;
         padding: 0.3em;
-        margin-top: -57%;
+        margin-top: -45%;
     }
     
   .portada{
@@ -112,7 +112,56 @@
     }
   
     
- 
+  
+    .amor {
+      width: 10%;
+      margin-left: 45%;
+      margin-top: 75%;
+    }
+      
+      .preloader {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #e9e9e9;
+        z-index: 9999;
+      
+      }
+      
+      .preloader::after {
+        content: '';
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 40px;
+        height: 40px;
+        margin: -20px 0 0 -20px;
+        border: 4px solid #76bac204; /* Color del círculo */
+        border-top-color: transparent;
+        border-radius: 50%;
+        animation: spin 5s linear infinite;
+      }
+      
+      @keyframes spin {
+        0% { transform: rotate(0deg); }
+        100% { transform: rotate(360deg); }
+      
+      }
+      
+      .loaded {
+        overflow: auto;
+      }
+      
+      .loaded .preloader {
+        transition-property: opacity, left;
+        transition-duration: 0.95s, 0s;
+        transition-delay: 0s, 0.95s;
+        opacity: 0;
+        left: 100%;
+      }
+  
 
 
     .parrafo1{
@@ -124,25 +173,33 @@
            margin-top: 20%;
     }
   .seccion-fiesta{
-    margin-top: 55%;
+    margin-top: -5%;
   }
   .seccion-regalo{
     margin-top: -5%;
   }
   
-  
+  .frase{
+    text-align: center;
+    font-size: 28px;
+    color: #636363;
+    margin-top: 20%; 
+    font-weight: 550;
+    margin: 13%;
+    font-family: 'Dancing Script', cursive; 
+  }
   .fiesta{
     text-align: center;
-    font-size: 25px;
-    color: #616161;
+    font-size: 35px;
+    color: #b88d2c;
     margin-top: 2%; 
     font-weight: 550;
-    margin: 20%;
+    margin: 13%;
     font-family: 'Dancing Script', cursive; 
   }
   .fiestaregalo{
     text-align: center;
-    font-size: 33px;
+    font-size: 20px;
     color: #787878;
     margin-top: -15%; 
     margin: 20%;
@@ -159,8 +216,8 @@
   
   .parrafodos{
     text-align: center;
-    font-size: 32px;
-    color: #787878;
+    font-size: 25px;
+    color: #4c4c4c;
     margin-top: 5%; 
     font-family: "Arsenal SC", sans-serif;
     font-weight: 400;
@@ -178,19 +235,49 @@
       font-weight: 400;
       border: none;
       border-radius: 20px;
-      color: #ffffff;
-     background-image: url(./imagenes/5af1f7230024abf57e8020427471018e.gif);
-     background-size: 80%;
+      color: #fcfcfc;
+     background-image: url(./IMAGENES/confeti.gif);
+     background-size: 150%;
       box-shadow: 1px 1px 30px -5px#d2c598; 
       cursor: pointer;
-
-      background-color:#0e0e0e ;
+      background-color: #b88d2c;
       text-decoration: none;
     }
     .boton{
 text-align: center;
-margin-top: -5%;
+margin-top: 10%;
     }
+
+
+    .form{
+      width: 14%;
+      margin-left: 45%;
+      margin-top: -17%;
+      
+    }
+
+
+.dorado{
+  width: 100%;
+  margin-top: -15%;
+}
+
+.chat{
+width: 20%;
+margin-left: 10% ;
+}
+.vicky{
+  width: 25%;
+margin-left: 5% ;
+}
+
+.hojas{
+  width: 65%;
+margin-left:-15% ;
+}
+
+
+
 .parrafoDe{
   text-align: center;
   font-size: 25px;
