--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@
     
   
     .cr-time > span {
-        font-size: 20px;
+        font-size: 23px;
         font-weight: bold;
         color: #b88d2c;
         font-family: 'Julius Sans One', sans-serif;
@@ -176,7 +176,7 @@
     margin-top: -5%;
   }
   .seccion-regalo{
-    margin-top: -5%;
+    margin-top: -4%;
   }
   
   .frase{
@@ -197,19 +197,32 @@
     margin: 13%;
     font-family: 'Dancing Script', cursive; 
   }
-  .fiestaregalo{
+  .obsequio{
     text-align: center;
-    font-size: 20px;
-    color: #787878;
-    margin-top: -15%; 
-    margin: 20%;
-    font-family: "Arsenal SC", sans-serif;
-    font-weight: 400;
+    font-size: 35px;
+    color: #b88d2c;
+    margin-top: 2%; 
+    font-weight: 550;
+    margin: 13%;
+    font-family: 'Dancing Script', cursive; 
   }
+  
   .copas{
     width: 25%;
     margin-left: 38%;
     margin-top: -15%;
+    
+  }
+  .final{
+    width: 38%;
+    margin-left: 31%;
+    margin-top: -5%;
+    
+  }
+  .regalo{
+    width: 22%;
+    margin-left: 38%;
+    margin-top: -10%;
     
   }
   
@@ -281,7 +294,7 @@ margin-left:-15% ;
 .parrafoDe{
   text-align: center;
   font-size: 25px;
-  color: #ffffff;
+  color: #4b4b4b;
   margin-top: 12%; 
   margin: 5%;
   font-family: "Arsenal SC", sans-serif;
@@ -292,40 +305,50 @@ margin-left:-15% ;
 }
 .parrafo3{
   text-align: center;
-  font-size: 32px;
-  color: #787878;
-  margin-top: -7%; 
-  font-family: "Arsenal SC", sans-serif;
-  font-weight: 400;
+    font-size: 25px;
+    color: #4c4c4c;
+    margin-top: 5%; 
+    font-family: "Arsenal SC", sans-serif;
+    font-weight: 400;
        
 }
-.final{
-  width: 100%;
-  
- 
+
+
+.carousel-inner img{
+  width: 90%;
+  margin-left: 5%;
+  margin-top: 10%;
 }
-.franco{
-  width: 100%;
-margin-top: 15%;
+
+
+
+
+.esperamos{
+  text-align: center;
+    font-size: 25px;
+    color: #4c4c4c;
+    margin-top: 15%; 
+    font-family: "Arsenal SC", sans-serif;
+    font-weight: 400;
  
 }
 
 .click2{
-  padding: 2px 10px;
-  font-family: "Arsenal SC", sans-serif;
-  margin-top: 1%;
-  font-size: 25px;
-  font-weight: 400;
-  border: none;
-  border-radius: 20px;
-  color: #ffffff;
- background-image: url(./imagenes/5af1f7230024abf57e8020427471018e.gif);
- background-size:80%;
-  box-shadow: 1px 1px 30px -5px#d2c598; 
-  cursor: pointer;
-margin-left: 38%;
-  background-color:#0e0e0e ;
-  text-decoration: none;
+ padding: 2px 10px;
+      font-family: "Arsenal SC", sans-serif;
+      margin-top: 5%;
+      font-size: 25px;
+      font-weight: 400;
+      border: none;
+      border-radius: 20px;
+      color: #fcfcfc;
+     background-image: url(./IMAGENES/confeti.gif);
+     background-size: 150%;
+      box-shadow: 1px 1px 30px -5px#d2c598; 
+      cursor: pointer;
+      background-color: #b88d2c;
+      text-decoration: none;
+      margin-left: 37%;
 }
 .tecla {
   margin-top: -50%;
